--- a/game.html
+++ b/game.html
@@ -105,9 +105,8 @@
 
         socket.on('recv_repo',(results)=>{
             let list = document.getElementById('repo_list');
-            console.log(results);
             for (let i=0; i<results.length; i++)
-                if (results[i] && results[i].id && results[i].num_kill && results[i].num_death) {
+                if (results[i]) {
                     list.innerHTML = list.innerHTML + "<li><span>" +
                         results[i].id + "</span><span>" +
                         results[i].num_kill + "/" +
