--- a/login.html
+++ b/login.html
@@ -63,7 +63,7 @@
                                             
                                             <div class="7u">
                                                 <label for="password-text">Password</label>
-                                                <input type="text" id="password-text" placeholder="Password" />
+                                                <input type="password" id="password-text" placeholder="Password" />
                                             </div>
 
                                             <div class="12u$">
