--- a/signup.html
+++ b/signup.html
@@ -59,12 +59,12 @@
 
                                             <div class="7u">
                                                 <label for="password-text">Password</label>
-                                                <input type="text" id="password-text"/>
+                                                <input type="password" id="password-text"/>
                                             </div>
 
                                             <div class="7u">
-                                                <label for="confirm-text">Confirm</label>
-                                                <input type="text" id="confirm-text"/>
+                                                <label for="confirm-text">Again</label>
+                                                <input type="password" id="confirm-text"/>
                                             </div>
 
                                             <div class="12u$">
