--- a/game.html
+++ b/game.html
@@ -62,20 +62,24 @@
                             <a id="repoBtn" href="#repo" class="button info fit">ADD</a>
                         </ul>
                         <div id="editor">
-                            {
-                                    //每帧开始时无条件触发
-                                onEvent : function() {
-                                    this.fire();
-                                },
+function() {
+    var tank = {
+            //每帧开始时无条件触发
+        onEvent : function() {
+            this.fire();
+        },
 
-                                onHitWall : function() {
+        onHitWall : function() {
 
-                                },
+        },
 
-                                onHitByBullet : function() {
+        onHitByBullet : function() {
 
-                                }
-                            }
+        }
+    };
+
+    return tank;
+}
                         </div>
                             
                         
