--- a/game.html
+++ b/game.html
@@ -26,7 +26,31 @@
 </head>
 
   <body>
-
+    <div class="weapon">
+    <img id="UMP9" src="img/UMP9.png"/>
+  <img id="Micro_Uzi" src="img/Micro_Uzi.png"/>
+  <img id="Vector" src="img/Vector.png"/>
+  <img id="AKM" src="img/AKM.png"/>
+  <img id="Groza" src="img/Groza.png"/>
+  <img id="M16A4" src="img/M16A4.png"/>
+  <img id="Scar-L" src="img/Scar-L.png"/>
+  <img id="M416" src="img/M416.png"/>
+  <img id="Kar-98K" src="img/Kar-98K.png"/>
+  <img id="M24" src="img/M24.png"/>
+  <img id="SKS" src="img/SKS.png"/>
+  <img id="AWM" src="img/AWM.png"/>
+  <img id="MK14" src="img/MK14.png"/>
+  <img id="M249" src="img/M249.png"/>
+  <img id="Minigun" src="img/Minigun.png"/>
+  <img id="Dominator-77" src="img/Dominator-77.png"/>
+  <img id="PF-89" src="img/PF-89.png"/>
+  <img id="S1897" src="img/S1897.png"/>
+  <img id="S686" src="img/S686.png"/>
+  <img id="Pan" src="img/Pan.png"/>
+  <img id="Grenade" src="img/Grenade.png"/>
+  <img id="DeathGrenade" src="img/DeathGrenade.png"/>
+  <img id="Seeker" src="img/Seeker.png"/>
+</div>
         <!-- Page Wrapper -->
             <div id="page-wrapper">
 
