--- a/game.html
+++ b/game.html
@@ -54,7 +54,9 @@
     <div class="gameover">
         <div id="msgbox" class="gameover_panel" onclick="$('.gameover').hide()">
             <ul>
-                <li><span>ID</span><span>K/D</span><span>RATE</span></li>
+                <li><span>Rank</span><span>ID</span><span>K/D</span></li>
+                <li><span>Rank</span><span>ID</span><span>K/D</span></li>
+                <li><span>Rank</span><span>ID</span><span>K/D</span></li>
             </ul>
         </div>
     </div>
