--- a/game.html
+++ b/game.html
@@ -57,6 +57,12 @@
                 <li><span>Rank</span><span>ID</span><span>K/D</span></li>
                 <li><span>Rank</span><span>ID</span><span>K/D</span></li>
                 <li><span>Rank</span><span>ID</span><span>K/D</span></li>
+                <li><span>Rank</span><span>ID</span><span>K/D</span></li>
+                <li><span>Rank</span><span>ID</span><span>K/D</span></li>
+                <li><span>Rank</span><span>ID</span><span>K/D</span></li>
+                <li><span>Rank</span><span>ID</span><span>K/D</span></li>
+                <li><span>Rank</span><span>ID</span><span>K/D</span></li>
+                <li><span>Rank</span><span>ID</span><span>K/D</span></li>
             </ul>
         </div>
     </div>
