--- a/game.html
+++ b/game.html
@@ -53,16 +53,7 @@
 
     <div class="gameover">
         <div id="msgbox" class="gameover_panel" onclick="$('.gameover').hide()">
-            <ul>
-                <li><span>Rank</span><span>ID</span><span>K/D</span></li>
-                <li><span>Rank</span><span>ID</span><span>K/D</span></li>
-                <li><span>Rank</span><span>ID</span><span>K/D</span></li>
-                <li><span>Rank</span><span>ID</span><span>K/D</span></li>
-                <li><span>Rank</span><span>ID</span><span>K/D</span></li>
-                <li><span>Rank</span><span>ID</span><span>K/D</span></li>
-                <li><span>Rank</span><span>ID</span><span>K/D</span></li>
-                <li><span>Rank</span><span>ID</span><span>K/D</span></li>
-                <li><span>Rank</span><span>ID</span><span>K/D</span></li>
+            <ul id="listboard">
             </ul>
         </div>
     </div>
@@ -101,7 +92,7 @@
                             <a id="repoBtn" href="#repo" class="button info fit">ADD</a>
                         </ul>
                         <div id="editor">
-() => {
+
     var tank = {
             //每帧开始时无条件触发
         onEvent : function() {
@@ -117,8 +108,6 @@
         }
     };
 
-    return tank;
-}
                         </div>
                             
                                  
@@ -149,8 +138,37 @@
         </script>
 
         <script>
-            var gameover = function(stat) {
+            var gameover = function(_stat) {
+                let stat = [];
+                for (var id in _stat)
+                    if (_stat[id] && _stat[id].kill>=0)
+                        stat.push([id, kill, death, kill / (death===0 ? 1 : death)]);
+                stat.sort((a, b)=>{
+                    if (a[3] < b[3])
+                        return 1;
+                    else if (a[3] > b[3])
+                        return -1;
+                    else if (a[2] > b[2])
+                        return 1;
+                    else if (a[2] < b[2])
+                        return -1;
+                    else if (a[0] > b[0])
+                        return 1;
+                    else if (a[0] < b[0])
+                        return -1;
+                    else
+                        return 0;
+                });
+
+                let list = document.getElementById("listboard");
+                list.innerHTML = "<li><span>Rank</span><span>ID</span><span>K/D</span></li>";
+
+                for (let i = 0; i < stat.length; i++)
+                    if (stat[i]!=undefined)
+                        list.innerHTML = list.innerHTML + "<li><span>" + (i + 1) + "</span><span>" + stat[i][0] + "</span><span>" + stat[i][1] + "/" + stat[i][2] + "</span></li>";
                 $('.gameover').show();
+
+                socket.emit('update_data', stat);
             };
         </script>
 
@@ -164,7 +182,7 @@
         core = new Q.core(enviroment,{width:600,height:600},{width:20,height:20},gameover);
         socket.emit("fetch_code", localStorage.curUser);
         socket.on('recv_code', (user)=>{
-            if (user.id === localStorage.curUser)
+            if (user.id === localStorage.curUser && user.code.length > 10)
                 editor.setValue(user.code);
             core.add_player(user.id, user.code);
         });
