--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
                 <!-- Banner -->
                     <section id="banner">
                         <div class="inner">
-                            <h2>LittleBattle</h2>
-                            <p>Automatic & Programmable</p>
+                            <h2>LittleBattle : C Round Financing</h2>
+                            <p>2.5亿自主研发</p>
                             <ul class="actions">
-                                <li><a id="playBtn" class="button special">Play</a></li>
+                                <li><a id="playBtn" class="button">Play</a></li>
+                                <li><a class="button">Donate</a></li>
                             </ul>
                         </div>
                     </section>
