--- a/signup.html
+++ b/signup.html
@@ -45,7 +45,7 @@
                 <!-- Login -->
                 <article id="main">
                     <header>
-                        <h2>Sign up</h2>
+                        <h2>注册即可参与分红</h2>
                     </header>
                     <section class="wrapper style5">
                             <div class="inner">
