--- a/game.html
+++ b/game.html
@@ -107,8 +107,7 @@ var tank = {
     }
 };
 
-                        </div>
-                            
+                        </div>       
                                  
                 </div>
                 <div class="right_body">
@@ -248,7 +247,7 @@ var tank = {
             }
             else {
                 if (core.player_count <= 1) {
-                    alert('就一个人，对墙撸吗？');
+                    alert('摇点人吧！一人太孤单了');
                     return;
                 }
                 core.running = true;
