--- a/game.html
+++ b/game.html
@@ -106,9 +106,11 @@ var tank = {
 
     },
 
-        //每帧开始时触发，参数enemies为数组，每个元素代表一个敌方玩家的位置，
-        //例如：enemies取值为[{x:300,y:200},{x:10,y:10}]时，
-        //表示有两个玩家，一个在(300,200)，另一个在(10,10)。
+        //每帧开始时触发，参数enemies为数组，每个元素代表一个敌方玩家的位置和速度，
+        //例如：enemies[0]取值为{ pos:{x:300,y:200}, speed:{x:100,y:0} }
+        //表示该玩家在(300,200)处，沿着x轴速度为100，y轴速度为0，
+        //若想获得该玩家的位置的x分量，即enemies[0].pos.x，
+        //该玩家的速度的y分量，即enemies[0].speed.y。
     onEnemySpotted : function(enemies) {
 
     }
