--- a/game.html
+++ b/game.html
@@ -124,6 +124,58 @@ var tank = {
                     <canvas id="map"></canvas>
                 </div>
             </div>
+
+            <section id="one" class="wrapper style1 special">
+                        <div class="inner">
+                            <header class="major">
+                                <h2>极简化2D对战平台</h2>
+                                <p>与传统射击类游戏不同的是，你需要为坦克编写程序，实现射击、躲避、绕开障碍物等等，而不是手动操控它<br />
+                                基于事件触发与函数调用的模块化风格</p>
+                            </header>
+                            <ul class="icons major">
+                                <li><span class="icon fa-code major style1"><span class="label">Lorem</span></span></li>
+                                <li><span class="icon fa-gamepad major style2"><span class="label">Ipsum</span></span></li>
+                                <li><span class="icon fa-wifi major style3"><span class="label">Dolor</span></span></li>
+                            </ul>
+                        </div>
+                    </section>
+
+                    <section id="three" class="wrapper style3 special">
+                        <div class="inner">
+                            <header class="major">
+                                <h2>使用JavaScript编写你的坦克</h2>
+                                <p>JavaScript风格与C语言接近，作为一种直译式脚本语言，我们设计了一套完备的函数接口，<br />
+                                    无需关心繁琐的细节与内部实现，设计您的坦克如同搭积木般简洁而易于上手。当然，如果你有较好的编程基础，<br />
+                                    也可以设计出智能且强大的“收割机”。
+                            </header>
+                            <ul class="features">
+                                <li class="icon fa-bolt">
+                                    <h3>事件机制</h3>
+                                    <p>在对战过程中，当发现敌人、遇到障碍物或者受到伤害的时候，就会触发对应的事件，所有你需要做的仅仅是如何响应它们（当然也可以选择忽略）。</p>
+                                </li>
+                                <li class="icon fa-cogs">
+                                    <h3>函数接口</h3>
+                                    <p>我们提供了一系列函数，你可以且仅能通过调用它们实现移动和射击，或者满足其他需求。对玩家来说，这些函数是不可再编程的原子操作。</p>
+                                </li>
+                                <li class="icon fa-gamepad">
+                                    <h3>胜负判定</h3>
+                                    <p>一局游戏至少有两名玩家设计的坦克参与对战，当战场只剩下一人存活，或是超过时间限制后，将会自动结束游戏。单局游戏的排名会由玩家的击杀/死亡数来决定。</p>
+                                </li>
+                                <li class="icon fa-cloud-upload">
+                                    <h3>代码托管</h3>
+                                    <p>玩家的代码会自动上传至服务器，无需手动保存。你也可以通过购买查阅他人的代码。</p>
+                                </li>
+                                <li class="icon fa-file-code-o">
+                                    <h3>文档</h3>
+                                    <p>如果设计过程中遇到困难，可以随时查看API文档。</p>
+                                </li><li class="icon fa-group">
+                                    <h3>积分与排名</h3>
+                                    <p>玩家最对战中击杀其他玩家、赢得胜利会增加自身积分，在库中你可以看到每位玩家的历史总击杀/死亡和积分，并且有相应的排名。当然，你总是可以挑选较弱的对手比赛，但是积分并不会显著增加。</p>
+                                </li>
+                                
+                            </ul>
+                        </div>
+                    </section>
              
 
         <script>
